# snowrunner

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: architecture.md  archive.md  discovery.md  roadmap.md
scratch/: a.py
src/: archive_explorer.py  pak_reader.py
src/snowrunner/: __init__.py  archive_explorer.py  dependency_extractor.py  explore.py  models.py  pak_reader.py  truck_summary.py  xml_document.py  xml_inspector.py  xml_models.py  xml_parser.py  xml_renderer.py
tests/: test_xml_inspector.py  test_xml_parser.py
