[project]
name = "snowrunner"
version = "0.1.0"
description = "Toolkit for exploring SnowRunner game data."
requires-python = ">=3.12"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
